--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,19 @@
-node_modules
-build_local
-.vscode
-.idea
-Thumbs.db
-.DS_Store
+/.phpunit.cache
+/node_modules
+/public/build
+/public/hot
+/public/storage
+/storage/*.key
+/vendor
+.env
+.env.backup
+.env.production
+.phpunit.result.cache
+Homestead.json
+Homestead.yaml
+auth.json
 npm-debug.log
 yarn-error.log
+/.fleet
+/.idea
+/.vscode
